--- a/src/index.css
+++ b/src/index.css
@@ -123,13 +123,58 @@ input:-moz-placeholder {
   font-size: 2rem;
 }
 
+.app-loading {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+@keyframes rotateMove {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.1);
+    opacity: 0.95;
+  }
+  100% {
+    transform: scale(0.99);
+    opacity: 0.05;
+  }
+}
+
+.loading-animation {
+  position: absolute;
+  top: 10rem;
+  transform: scale(5);
+}
+
+.loading-animation svg path:first-child {
+  transform: scale(0.5);
+  transform-origin: center;
+  animation: pulse 2s ease-in infinite;
+}
+
+.loading-animation svg path + path {
+  transform-origin: center;
+  animation: rotateMove 2s ease-in-out infinite;
+}
+
 .app-error {
-  background-color: var(--color-error);
+  position: relative;
+  z-index: 1;
 }
 .app-error-message {
   min-width: 300px;
   padding: 24px;
-  background-color: var(--color-bg-secondary);
+  background-color: var(--color-error);
   line-height: 2;
 }
 /* End IsLoading & Error */
