--- a/src/index.css
+++ b/src/index.css
@@ -14,19 +14,19 @@
   --notification-color: var(--color-white);
   --notification-bg-color: var(--color-info);
 
+  --animation-delay: 500ms;
+
   --font-family-roboto: 'Roboto Mono', monospace;
 
   --transition-default: all 150ms ease;
 
+  --app-background-color: var(--color-bg-secondary);
   --app-container-padding: 40px 24px 0;
-
   --app-description-margin: 52px 0 43px;
   --app-description-success-margin: 152px 0 143px;
   --app-description-font-size: 28px;
   --app-description-line-height: 36px;
-
   --app-top-padding-y: 29px;
-
   --app-bottom-copyrights-margin-top: 125px;
   --app-bottom-container-padding-bottom: 29px;
   --app-bottom-description-width: auto;
@@ -72,7 +72,7 @@
   font-style: normal;
 
   color: var(--color-black);
-  background-color: var(--color-bg-secondary);
+  background-color: var(--app-background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -129,6 +129,9 @@ input:-moz-placeholder {
   width: 100%;
   z-index: 2;
 }
+.app-loading-bg {
+  background-color: var(--app-background-color);
+}
 
 @keyframes rotateMove {
   0% {
@@ -179,28 +182,25 @@ input:-moz-placeholder {
 }
 /* End IsLoading & Error */
 
-.app-container {
-  margin: 0 auto;
-  padding: var(--app-container-padding);
-}
-
 /* Animation for loaded content */
-.app-top,
-.app-bottom {
-  --delay: 500ms;
+.app-wrapper {
   opacity: 0;
   transform: translateY(-50px) scaleZ(0.9);
   transition-timing-function: ease-in-out;
   transition-property: all;
-  transition-duration: var(--delay);
-  transition-delay: var(--delay);
+  transition-duration: var(--animation-delay);
+  transition-delay: calc(var(--animation-delay) / 2);
 }
-.app-top.is-loaded,
-.app-bottom.is-loaded {
+.app-wrapper.is-loaded {
   opacity: 1;
   transform: translateY(0px) scaleZ(1);
 }
 /* End animation for loaded content */
+
+.app-container {
+  margin: 0 auto;
+  padding: var(--app-container-padding);
+}
 
 .app-top {
   padding-bottom: var(--app-top-padding-y);
